Bug 459260 - Application crashes when deleting a file that is in a locked timeline.
Summary: Application crashes when deleting a file that is in a locked timeline.
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 22.08.0
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-17 09:04 UTC by rvec136551
Modified: 2022-09-17 14:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rvec136551 2022-09-17 09:04:50 UTC
I tried to delete an audiofile while i forgot that i locked the timeline it was in. Result-> application closes.

STEPS TO REPRODUCE
1. Insert audio/video file in the project-bin.
2. Insert file in timeline
3. Lock the timeline where the file is inserted
4. Delete file in the project-bin
5. Klick continue
(Expected a error here that the timeline is locked)
6. Klick on file that is still in the timeline
7. Crash!!

OBSERVED RESULT
The Kdenlive aplication closes

EXPECTED RESULT
An error message that tells stupid me that I locked the file that I am trying to delete from the timeline.
probably more like:
'File can't be deleted, because it is in a locked timeline'


SOFTWARE/OS VERSIONS
Windows: 10


ADDITIONAL INFORMATION
The automatic backup works good! No lost work.
Comment 1 Julius Künzel 2022-09-17 10:27:40 UTC
Thanks for your report!

I can confirm this issue.
Comment 2 Julius Künzel 2022-09-17 14:06:45 UTC
Git commit 707628042cb53e9745f96d64550d578e23de2e1d by Julius Künzel.
Committed on 17/09/2022 at 14:06.
Pushed by jlskuz into branch 'master'.

Show message on bin item deletion failure

M  +7    -1    src/bin/bin.cpp

https://invent.kde.org/multimedia/kdenlive/commit/707628042cb53e9745f96d64550d578e23de2e1d
Comment 3 Julius Künzel 2022-09-17 14:06:53 UTC
Git commit ac4795e727eeba7ce899e1268433dda7d8281ccd by Julius Künzel.
Committed on 17/09/2022 at 14:06.
Pushed by jlskuz into branch 'master'.

Fix crash on bin clip deletion with instance on locked track

M  +3    -1    src/bin/projectclip.cpp
M  +3    -1    src/bin/projectitemmodel.cpp

https://invent.kde.org/multimedia/kdenlive/commit/ac4795e727eeba7ce899e1268433dda7d8281ccd
Comment 4 Julius Künzel 2022-09-17 14:07:01 UTC
Git commit a5351b850ae7cb9ef5af9c548a961a9a01c8041e by Julius Künzel.
Committed on 17/09/2022 at 14:06.
Pushed by jlskuz into branch 'master'.

Add test for bin clip deletion with instance on locked track

M  +34   -0    tests/modeltest.cpp

https://invent.kde.org/multimedia/kdenlive/commit/a5351b850ae7cb9ef5af9c548a961a9a01c8041e
Comment 5 Julius Künzel 2022-09-17 14:07:50 UTC
Git commit 96a87abe0148104e985b09585aec8cd76356c250 by Julius Künzel.
Committed on 17/09/2022 at 14:07.
Pushed by jlskuz into branch 'release/22.08'.

Add test for bin clip deletion with instance on locked track

M  +34   -0    tests/modeltest.cpp

https://invent.kde.org/multimedia/kdenlive/commit/96a87abe0148104e985b09585aec8cd76356c250
Comment 6 Julius Künzel 2022-09-17 14:07:58 UTC
Git commit 505a09f8bad262540aefd51d691a1641f91cadc2 by Julius Künzel.
Committed on 17/09/2022 at 14:07.
Pushed by jlskuz into branch 'release/22.08'.

Fix crash on bin clip deletion with instance on locked track

M  +3    -1    src/bin/projectclip.cpp
M  +3    -1    src/bin/projectitemmodel.cpp

https://invent.kde.org/multimedia/kdenlive/commit/505a09f8bad262540aefd51d691a1641f91cadc2