Fix crash on bin clip deletion with instance on locked track

BUG: 459260